--- a/public/web_pro/staff/stf-history.html
+++ b/public/web_pro/staff/stf-history.html
@@ -125,7 +125,7 @@
                         <button class="btn-sidebar"><i class="fa fa-archive"> </i>Asset List</button>
                     </a>
 
-                    <a href="/lecturer/Borrowing-requests">
+                    <a href="/staff/Borrowing-requests">
                         <button class="btn-sidebar"><i class="fa fa-clipboard-list"> </i>Borrow Request</button>
                     </a>
 
@@ -223,18 +223,29 @@
 
         // Load history data
         function loadHistory(status) {
-            fetch(`/get-history?status=${status}`)
-                .then(response => response.json())
+            fetch(`/api/borrow/requests?status=${status}`)
+                .then(response => {
+                    if (!response.ok) {
+                        return response.text().then(text => { throw new Error(text || `HTTP error! Status: ${response.status}`); });
+                    }
+                    return response.json();
+                })
                 .then(data => {
                     const tableBody = document.getElementById('table-body');
-                    tableBody.innerHTML = ''; // Clear existing content
-
+                    tableBody.innerHTML = '';
                     data.forEach(item => {
                         const row = createTableRow(item);
                         tableBody.appendChild(row);
                     });
                 })
-                .catch(error => console.error('Error:', error));
+                .catch(error => {
+                    console.error('Error:', error);
+                    if (window.Swal && Swal.fire) {
+                        Swal.fire('Error', error.message, 'error');
+                    } else {
+                        alert(error.message);
+                    }
+                });
         }
 
         // Create table row
